--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/btn_meal_plan"
+        android:text="@string/title_activity_meal_plan"
         android:onClick="navMealPlan" />
 
 </RelativeLayout>
