--- a/res/layout/activity_meal_plan.xml
+++ b/res/layout/activity_meal_plan.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" >
 
-        <com.primateer.daikoku.ui.views.widgets.DateWidget
+        <com.primateer.daikoku.ui.widgets.DateWidget
             android:id="@+id/mealplan_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
